--- a/webclient/src/app/components/training-program/create-program/create-program.component.html
+++ b/webclient/src/app/components/training-program/create-program/create-program.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-7 col-lg-5 col-sm-9 col-xs-12">
-  <h3>Create a Training Program - {{pageTitle}}</h3>
+  <h3>Create a Training Program</h3>
   <br/>
   <form name="form" (ngSubmit)="fDetails.form.valid && submitprogram()" #fDetails="ngForm" novalidate>
     <div >
@@ -31,10 +31,10 @@
     <div class="form-group">
         <div class="row">
           <div class="col-xs-6 col-sm-6 col-md-6">
-            <button type="button" (click)="backToprogramDetails()" class="btn btn-info form-control">
-              Back
-              <fa-icon class="float-left" [icon]="backIcon"></fa-icon>
-            </button>
+              <a routerLink="/programs/program-listing" class="btn btn-info form-control">
+                <fa-icon class="float-left" [icon]="backIcon"></fa-icon>
+                Back
+              </a>
           </div>
           <div class="col-xs-6 col-sm-6 col-md-6">
             <button type="submit" (click)="submitProgram()" class="btn btn-success form-control">
