--- a/webclient/src/styles.css
+++ b/webclient/src/styles.css
@@ -7514,7 +7514,7 @@
     border: 2px solid transparent;
     font-size: 14px;
     letter-spacing: .2em;
-    text-transform: uppercase;
+    text-transform: capitalize;
     color: #999999;
     -webkit-box-shadow: 0 20px 40px -15px rgba(0, 0, 0, 0.2);
     box-shadow: 0 20px 40px -15px rgba(0, 0, 0, 0.2); }
